--- a/index.html
+++ b/index.html
@@ -51,7 +51,25 @@
                         <input type="text" placeholder="1/10/2010" id="datetime" />
                     </li>
                     <li class="list-group-item bg-dark">
-                        <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
+                        <label for="city">Enter a City</label>
+                        <input type="text" placeholder="New York" id="city" />
+                    </li>
+                    <li class="list-group-item bg-dark">
+                        <label for="state">Enter a State</label>
+                        <input type="text" placeholder="NY" id="state" />
+                    </li>
+                    <li class="list-group-item bg-dark">
+                        <label for="country">Enter a Country</label>
+                        <input type="text" placeholder="US" id="country" />
+                    </li>
+                    <li class="list-group-item bg-dark">
+                        <label for="shape">Enter a Shape</label>
+                        <input type="text" placeholder="Oval" id="shape" />
+                    </li>
+                    <li class="list-group" class="btn-dark">
+                        <button id="filter-btn" type="button" class="btn-dark">
+                        Filter Table
+                        </button>
 
                     </li>
                 </ul>
